Cai dat express chay thong bao xin chao

--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "contactbook-backend",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/TrinhNhonHoa/CT449-backend2#readme",
+  "bugs": {
+    "url": "https://github.com/TrinhNhonHoa/CT449-backend2/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TrinhNhonHoa/CT449-backend2.git"
+  },
   "license": "ISC",
   "author": "Hoa Trinh",
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.13.1"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
