--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongodb": "^6.13.1"
-  },
-  "devDependencies": {
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
-    "prettier": "^3.5.2"
+
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.21.2",
+      "mongodb": "^6.13.0",
+      "require": "^0.4.4"
+    },
+    "devDependencies": {
+      "@eslint/js": "^9.20.0",
+      "eslint": "^9.20.0",
+      "eslint-config-prettier": "^10.0.1",
+      "eslint-plugin-react": "^7.37.4",
+      "globals": "^15.14.0",
+      "nodemon": "^3.1.9",
+      "prettier": "^3.4.2"
+    }
   }
-}
